--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^3.9.96",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
